# virtual-abstraction-client

./: .gitignore  CMakeLists.txt  README.md  make.sh
pylib/: README.md
pylib/Data_IO/: dataset_prepare.py
pylib/Model_Settings/: json_maker.py
src/: CMakeLists.txt  get_quote.py  main.cpp
